main div (almost) complete

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <br><br>
         Join the <b>42</b> other donors who have already supported this project. Every dollar helps.</p>
         
-        <div class="input-donor">
+        <div class="main-buttons" id="donation">
             <p><b>$</b> 50</p>
         </div>
-        <div class="button-donor">
+        <div class="main-buttons" id="give">
             <p>Give Now</p>
         </div>
-        <p><i>Why give 50?</i></p>
+        <p id="why">Why give $50?</p>
     </div>
     
     <div class="button">
