bottom buttons added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
  
+    <div class="progress-bar">
+        <div class="progress"></div>
+    </div>
+    
     <div class="main">
         <p> <span><b>Only 3 days left</b></span> to fund this project.
         <br><br>
@@ -23,13 +27,11 @@
         </div>
         <p id="why">Why give $50?</p>
     </div>
-    
-    <div class="button">
-    <p>Save for later</p>
+
+    <div class="button-container">
+        <button id="save">Save for later</button>
+        <button id="friends">Tell your friends</button>
     </div>
-    <div class="button">
-    <p>Tell your friends</p>
-    </div>
- 
+
 </body>
 </html>
