top dialogue added

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 	<title>Planning Center | Donations</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<link rel="icon" type="image/png" href="/img/favicon.png">-->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
  
+    <div class="dialogue">
+        <p><b>$167</b> still needed for this project</p>
+    </div>
+    
     <div class="progress-bar">
         <div class="progress"></div>
     </div>
@@ -20,11 +23,11 @@
         Join the <b>42</b> other donors who have already supported this project. Every dollar helps.</p>
         
         <div class="main-buttons" id="donation">
-            <p><b>$</b> 50</p>
+            <p><b>$</b> <span>50</span></p>
         </div>
-        <div class="main-buttons" id="give">
+        <button class="main-buttons" id="give">
             <p>Give Now</p>
-        </div>
+        </button>
         <p id="why">Why give $50?</p>
     </div>
 
